2010-10-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-img): Shorten ALT texts and allow them to be
	line-broken.

	* mm-decode.el (mm-shr): Require shr.

	* gnus-art.el (gnus-blocked-images): Move variable here.

	* shr.el (shr-insert-table): Bind free variable.

	* mm-decode.el (mm-shr): Bind shr-content-function.

	* shr.el (shr-content-function): New variable.

	* gnus-sum.el (gnus-article-sort-by-most-recent-date): New function,
	added for symmetry.

	* nnir.el (nnir-retrieve-headers): Don't bug out on invalid data.

	* gnus-group.el (gnus-group-make-group): Doc fix.

	* nnimap.el (nnimap-request-newgroups): Return success.

	* shr.el (shr-find-elements): New function.
	(shr-tag-table): Put all the images after the table.
	(shr-tag-table): Really inhibit images inside the table.
	(shr-collect-overlays): Copy over overlays from the TD elements to the
	main document.

	* mm-decode.el (mm-shr): Bind shr-blocked-images to
	gnus-blocked-images.

2010-10-05  Julien Danjou  <julien@danjou.info>

	* gnus-html.el (gnus-html-wash-images): Rescale image from cid too.
	(gnus-html-maximum-image-size): Add this function.
	(gnus-html-put-image): Use gnus-html-maximum-image-size.

	* sieve-manage.el (sieve-manage-capability): Do not bug out when the
	server-value of the capability is nil.

2010-10-05  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-em): Add <EM> tag.

2010-10-05  Florian Ragwitz  <rafl@debian.org>  (tiny change)

	* sieve-manage.el (sieve-manage-default-stream): Make default stream
	customizable.

	* gnus-html.el (gnus-html-wash-tags): Decode URL entities to avoid
	handing broken links to browse-url.

2010-10-05  Julien Danjou  <julien@danjou.info>

	* gnus-util.el (gnus-emacs-completing-read)
	(gnus-iswitchb-completing-read): Use autoload rather than require.

2010-10-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lpath.el: Fbind libxml-parse-html-region and shr-insert-document for